<resources>
    <string name="app_name">TS Calc</string>
    <string name="version">TS% Calculator v0.1.1</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">TS% Calculator</string>
    <string name="second_fragment_label">About</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="points">Points:</string>
    <string name="fga">FGA:</string>
    <string name="fta">FTA:</string>
    <string name="zeroPercent">0%</string>
    <string name="zero">0</string>
    <string name="bbrefLink">Formula used from \n<a href="https://www.basketball-reference.com/about/glossary.html#tov">Basketball-Reference</a></string>
    <string name="copyright">Licensed under Apache 2.0</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_icon_basketball_wearing_nerdy_glasses">App Icon: Basketball wearing nerdy glasses</string>
</resources>