<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="167dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/zeroPercent"
        android:textAlignment="center"
        android:textColor="#C62828"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFTA" />

    <EditText
        android:id="@+id/editP"
        android:layout_width="230dp"
        android:layout_height="65dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="17dp"
        android:ems="10"
        android:hint="@string/zero"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="9"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_p"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editFGA"
        android:layout_width="230dp"
        android:layout_height="75dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="17dp"
        android:ems="10"
        android:hint="@string/zero"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="9"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_fga"
        app:layout_constraintTop_toBottomOf="@+id/editP" />

    <TextView
        android:id="@+id/textview_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="9dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/points"
        android:textAlignment="textEnd"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editFTA"
        android:layout_width="230dp"
        android:layout_height="75dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="17dp"
        android:ems="10"
        android:hint="@string/zero"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="9"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_fta"
        app:layout_constraintTop_toBottomOf="@+id/editFGA" />

    <TextView
        android:id="@+id/textview_fta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/fta"
        android:textAlignment="textEnd"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editFTA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_fga" />

    <TextView
        android:id="@+id/textview_fga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="39dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/fga"
        android:textAlignment="textEnd"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textview_fta"
        app:layout_constraintEnd_toStartOf="@+id/editFGA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_p" />

</androidx.constraintlayout.widget.ConstraintLayout>