<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="78dp"
        android:contentDescription="@string/app_icon_basketball_wearing_nerdy_glasses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/nerdball"
        tools:src="@mipmap/nerdball" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="126dp"
        android:fontFamily="sans-serif"
        android:text="@string/version"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/formulaLink"
        android:layout_width="337dp"
        android:layout_height="62dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="37dp"
        android:text="@string/bbrefLink"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="240dp"
        android:layout_height="74dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="73dp"
        android:text="Note: Average TS is currently set to '56', plan is to use actual NBA data at some point."
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formulaLink" />

</androidx.constraintlayout.widget.ConstraintLayout>